# ColeopteraOS

./: .gitignore  LICENSE  README.md
Learning/: shell_assignments.md
Learning/destroy/: Cargo.toml
Learning/destroy/src/: main.rs
Learning/newname/: Cargo.toml
Learning/newname/src/: main.rs
coleopter_os/: Cargo.toml  Makefile  build.rs  kernel8.img
coleopter_os/src/: bsp.rs  console.rs  cpu.rs  driver.rs  main.rs  panic_wait.rs  print.rs  runtime_init.rs
coleopter_os/src/_arch/aarch64/: cpu.rs
coleopter_os/src/_arch/aarch64/cpu/: boot.rs
coleopter_os/src/bsp/: device_driver.rs  raspberrypi.rs
coleopter_os/src/bsp/device_driver/: bcm.rs  common.rs
coleopter_os/src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
coleopter_os/src/bsp/raspberrypi/: console.rs  driver.rs  link.ld  memory.rs
coleopter_os/src/cpu/: boot.rs
coleopter_os/tests/: boot_test_string.rb
coleopter_os/utils/: color.mk.in
